--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Nandini's Portfolio</title>
+</head>
+<body>
+    <h1>Nandini's Portfolio</h1>
+    <h2>I'm a Web developer</h2>
+    <hr />
+
+    <h3><a href = "./public/movie-ranking.html">Movie Ranking Project</a></h3>
+
+    <img src = "./public/movie_ranking.png" height = 200 alt = "Movie Ranking Image"/>
+
+    <h3><a href = "./public/birthday-invite.html">Birthday Project</a></h3>
+    <img src = "./public/Birthday_project.png" height = 200 alt = "Birthday image"/>
+    <hr />
+    <h4>
+        <a href = "./public/about.html">about me</a>
+        <a href = "./public/contact.html">contact me</a>
+    </h4>
+</body>
+</html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
